--- a/android_search/res/values-v21/styles.xml
+++ b/android_search/res/values-v21/styles.xml
@@ -18,8 +18,8 @@
 	    <item name="android:windowContentTransitions">true</item>
 	    <item name="android:windowAllowEnterTransitionOverlap">true</item>
 	    <item name="android:windowAllowReturnTransitionOverlap">true</item>
-	    <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
-	    <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+	    <item name="android:windowSharedElementEnterTransition">@transition/change_image_transform</item>
+	    <item name="android:windowSharedElementExitTransition">@transition/change_image_transform</item>
 	</style>
     
 </resources>
