--- a/android_search/res/layout/activity_image_gallery.xml
+++ b/android_search/res/layout/activity_image_gallery.xml
@@ -1,41 +1,41 @@
-<FrameLayout xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/chat_background"
     tools:context=".ImageGalleryActivity" >
 
-    <!--
-         The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc.
-    -->
+    <android.support.v7.widget.Toolbar
+	    android:id="@+id/toolbar"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:minHeight="?attr/actionBarSize"
+	    android:background="?attr/colorPrimaryDark"
+	    />
+        
 
-    <android.support.modified.v4.view.ViewPager
+    <android.support.v4.view.ViewPager
         android:id="@+id/fullscreen_content"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar" />
 
     <!--
          This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows.
     -->
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true" >
-
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:orientation="vertical"
-            tools:ignore="UselessParent" >
             
+            <com.viewpagerindicator.UnderlinePageIndicator
+		        android:id="@+id/indicator"
+		        android:layout_height="2dp"
+		        android:layout_width="fill_parent"
+		        android:layout_alignParentBottom="true"
+		    />
+      
             <TextView 
                 android:id="@+id/photo_caption"
+                android:layout_above="@id/indicator"
                 android:background="@color/black_overlay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -44,13 +44,4 @@
                 />
 <!--                 style="?buttonBarButtonStyle" -->
             
-            <com.viewpagerindicator.UnderlinePageIndicator
-		        android:id="@+id/indicator"
-		        android:layout_height="2dp"
-		        android:layout_width="fill_parent"
-		    />
-      
-        </LinearLayout>
-    </FrameLayout>
-
-</FrameLayout>
+</RelativeLayout>
