--- a/android_search/res/layout/fullscreen_image.xml
+++ b/android_search/res/layout/fullscreen_image.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
  
     <ImageView
+     xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/imgDisplay"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:transitionName="fullscreen_image"
         android:scaleType="fitCenter" />
  
  
-</RelativeLayout>
