--- a/android_search/res/layout/hotel_list_item.xml
+++ b/android_search/res/layout/hotel_list_item.xml
@@ -1,178 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/hotel_list_item_layout"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/hotel_background"
-     >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    
-    
-     <ImageView
-       android:id="@+id/hotelImage"
-       android:layout_width="72dip"
-       android:layout_height="72dip"
-       android:src="@drawable/slanted_icon_72"
-       android:padding="2dp"
-       android:contentDescription="@string/hotel_image">
-       
-   	  </ImageView>
-    
-     
-    <LinearLayout
-        android:id="@+id/layoutDetails"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/hotelImage"
-        android:padding="2dip"
-        android:orientation="vertical" 
-        >
-        
-        <!--  Row 1:  Name + stars -->
-        <LinearLayout 
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        card_view:cardBackgroundColor="#efefef"
+        card_view:cardElevation="6dp" >
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-    
-            
-            
-        <TextView
-	           android:id="@+id/hotelName"
-	           android:layout_width="wrap_content"
-	           android:layout_height="wrap_content"
-	           android:ellipsize="marquee"
-	           android:layout_weight="1"
-	           android:marqueeRepeatLimit="marquee_forever"
-	           android:singleLine="true"
-	           android:text="Hotel Name Bla Bla Yada Yada"
-	           android:textColor="#FF000000"
-	           android:textSize="18sp"
-	           android:textStyle="bold"
-	           android:transitionName="hotelName" />
-	<!--            android:freezesText="true" -->
-            
-            <RatingBar
-                android:id="@+id/rating"
-                android:layout_width="wrap_content"
-                android:layout_height="20dip"
-                android:layout_marginTop="2dip"
-                android:layout_weight="0"
-                android:isIndicator="true"
-                android:transitionName="hotelStarRating"
-                android:progressDrawable="@drawable/rating_layers_tiny" 
-                />
-    
-        </LinearLayout>
-        
-   	
-        <!--  Row 2: Location -->
-         <LinearLayout 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-    
-             <TextView
-                android:id="@+id/hotelLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            android:minHeight="116dip"
+            android:orientation="horizontal"
+            android:background="@color/white" >
+
+            <ImageView
+                android:id="@+id/hotelImage"
+                android:layout_width="116dip"
+                android:layout_height="match_parent"
+                android:minHeight="116dip"
+                android:contentDescription="@string/hotel_image"
+                android:padding="2dp"
+                android:background="#444"
+                android:src="@drawable/slanted_icon_72" >
+            </ImageView>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
                 android:layout_weight="1"
-                android:ellipsize="marquee"
-                android:singleLine="true"
-                android:text="Located near city center"
-                android:textColor="#ff1f5477" />
-             
-			<TextView
-                     android:id="@+id/hotelDistance"
-                     android:layout_width="wrap_content"
-                     android:layout_height="22sp"
-                     android:gravity="center"
-                     android:layout_weight="0"
-                     android:singleLine="true"
-                     android:drawableLeft="@drawable/target"
-                     android:text="15Km"
-                     android:textColor="#ff2f74a7"
-                     android:textSize="12sp"/>
+                android:layout_toEndOf="@id/hotelImage" >
 
-		</LinearLayout>
-		
-         
-         <!--  Row 3:  trip advisor + price -->
-         <LinearLayout 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="bottom"
-            android:orientation="horizontal">
-             
-<!--                 <TextView -->
-<!--                     android:layout_width="wrap_content" -->
-<!--                     android:layout_height="wrap_content" -->
-<!--                     android:text="TripAdvisor reviews: " -->
-<!--                     android:textColor="#ff7f7f9f" -->
-<!--                     android:textSize="10sp" /> -->
-                
-<!--                 <TextView -->
-<!--                     android:id="@+id/tripAdvisorRating" -->
-<!--                     android:layout_width="wrap_content" -->
-<!--                     android:layout_height="wrap_content"  -->
-<!--                     /> -->
-                
-                <ImageView
-                    android:id="@+id/tripAdvisorStrip"
-                    android:layout_width="100dip"
-                    android:layout_height="20dip"
-                    android:transitionName="hotelTripAdvRating"
-                    android:contentDescription="@string/trip_advisor_icon" />
-                
+                <!-- Row 1: Name -->
+
                 <TextView
-                    android:id="@+id/tripAdvisorReviews"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/hotelName"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="4dip"
-                    android:text="(3,456)"
-                    android:textColor="#ff7f7f9f"
-                    android:textSize="12sp" />
+                    android:paddingStart="4dp"
+                    android:paddingEnd="2dp"
+                    android:background="#444"
+                    android:singleLine="false"
+                    android:layout_alignParentTop="true"
+                    android:text="Hotel Name Bla Bla Yada Yada"
+                    android:textColor="#fff"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:transitionName="hotelName"
+                    tools:ignore="HardcodedText" />
 
-            
-             <LinearLayout
-                android:id="@+id/layoutBottomRow"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:layout_marginLeft="3dip"
-                android:gravity="right|bottom"
-                >
+                <!-- android:freezesText="true" -->
 
-                 <TextView
-                    android:id="@+id/textFromTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="≥"
-                    android:layout_marginRight="2dip"
-                    android:textColor="#FF9f9faf"
-                    android:textSize="18sp" />
-           
+
+                <!-- Row 2: Location -->
+
                 <TextView
-                    android:id="@+id/pricePerNight"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/hotelLocation"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="$180.20"
-                    android:textColor="#ff2f74a7"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:layout_below="@id/hotelName"
+                    android:layout_gravity="top"
+                    android:ellipsize="marquee"
+                    android:singleLine="true"
+                    android:text="Located near city center"
+                    android:textColor="#777777"
+                    tools:ignore="HardcodedText" />
 
-                      
-                <TextView
-                    android:id="@+id/perNightTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/per_night"
-                    android:textColor="#ff9f9faf"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                <!-- Row 3: Star Rating-->
                 
-            </LinearLayout>
+   			    <RatingBar
+	                    android:id="@+id/rating"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="20dip"
+	                    android:layout_marginStart="24dp"
+	                    android:isIndicator="true"
+	                    android:layout_alignParentBottom="true"
+	                    android:layout_alignParentStart="true"
+	                    android:progressDrawable="@drawable/rating_layers_tiny"
+	                    android:transitionName="hotelStarRating" />    
+				    
+                
+
+                <!-- trip advisor -->
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_above="@id/rating"
+                    android:gravity="start"
+                    android:orientation="horizontal" >
+
+                    
+                     
+                    <ImageView
+                        android:id="@+id/tripAdvisorStrip"
+                        android:layout_width="100dip"
+                        android:layout_height="20dip"
+                        android:contentDescription="@string/trip_advisor_icon"
+                        android:transitionName="hotelTripAdvRating" />
+
+                    <TextView
+                         android:id="@+id/tripAdvisorReviews"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginEnd="2dip"
+                         android:text="(3,456)"
+                         android:textColor="#afafaf"
+                         android:textSize="11sp"
+                         tools:ignore="HardcodedText" />
+                </LinearLayout>
+			    
+                
+                <!-- Price -->
+
+                    <LinearLayout
+                        android:id="@+id/price_layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#ee8cc34b"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:gravity="center_vertical|end"
+                        android:orientation="horizontal"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
+                        android:paddingRight="4dp"
+                        android:paddingLeft="4dp"
+                         >
+
+<!--                         <TextView -->
+<!--                         android:id="@+id/textFromTitle" -->
+<!--                         android:layout_width="wrap_content" -->
+<!--                         android:layout_height="wrap_content" -->
+<!--                         android:textColor="@color/white" -->
+<!--                         android:layout_weight="1" -->
+<!--                         android:layout_gravity="bottom" -->
+<!--                         android:text="≥" -->
+<!--                         android:gravity="end" -->
+<!--                         android:layout_marginRight="2dip" -->
+<!--                         android:textSize="18sp" /> -->
+
+                        <TextView
+                            android:id="@+id/pricePerNight"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="$180.20"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/perNightTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/per_night"
+                            android:layout_gravity="bottom"
+                            android:gravity="bottom|end"
+                            android:textColor="@color/white"
+                            android:textSize="12sp" />
+                    </LinearLayout> <!-- tripadvisor -->
+                    
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_above="@id/price_layout"
+                        android:background="#444" >
+
+                        <TextView
+                            android:id="@+id/hotelDistance"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:drawableLeft="@drawable/target"
+                            android:singleLine="true"
+                            android:text="15Km"
+                            android:textColor="@color/white"
+                            android:textSize="16sp" />
+                    </FrameLayout>
+                    
+        	</RelativeLayout>
         </LinearLayout>
-    </LinearLayout>
-            
-    
-</RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</FrameLayout>
