--- a/android_search/res/layout/hotel_list_item.xml
+++ b/android_search/res/layout/hotel_list_item.xml
@@ -4,30 +4,30 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/hotel_list_item_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content" >
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="12dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         card_view:cardBackgroundColor="#efefef"
         card_view:cardElevation="6dp" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:minHeight="116dip"
             android:orientation="horizontal"
             android:background="@color/white" >
 
             <ImageView
                 android:id="@+id/hotelImage"
-                android:layout_width="116dip"
-                android:layout_height="match_parent"
+                android:layout_width="174dip"
+                android:layout_height="116dip"
                 android:minHeight="116dip"
                 android:contentDescription="@string/hotel_image"
                 android:padding="2dp"
@@ -38,7 +38,6 @@
             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_weight="1"
                 android:layout_toEndOf="@id/hotelImage" >
 
@@ -72,6 +71,8 @@
                     android:layout_below="@id/hotelName"
                     android:layout_gravity="top"
                     android:ellipsize="marquee"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="2dp"
                     android:singleLine="true"
                     android:text="Located near city center"
                     android:textColor="#777777"
@@ -98,8 +99,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
+                    android:layout_below="@id/hotelLocation"
                     android:layout_above="@id/rating"
-                    android:gravity="start"
+                    android:gravity="start|bottom"
                     android:orientation="horizontal" >
 
                     
