--- a/android_search/res/values/colors.xml
+++ b/android_search/res/values/colors.xml
@@ -3,6 +3,8 @@
 
     <color name="colorPrimary">#ffdd4444</color>
     <color name="colorPrimaryDark">#ffcc3333</color>
+
+    <color name="times_markup">#ff4455ff</color>
     
     <color name="picker_text_color">#ff101010</color>
     <color name="toolbar_logo_divider">#ff576eb1</color>
