--- a/android_search/res/layout/activity_image_gallery.xml
+++ b/android_search/res/layout/activity_image_gallery.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/chat_background"
+    android:background="@color/chat_background"
     tools:context=".ImageGalleryActivity" >
 
     <android.support.v7.widget.Toolbar
