--- a/android_search/res/layout/activity_main.xml
+++ b/android_search/res/layout/activity_main.xml
@@ -26,7 +26,7 @@ android:layout_height="match_parent">
     android:id="@+id/the_main_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:background="@drawable/chat_background"
+    android:background="@color/chat_background"
     android:layout_height="fill_parent">
 
    
@@ -57,7 +57,7 @@ android:layout_height="match_parent">
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:layout_alignParentBottom="true"
-        android:background="@drawable/chat_background"
+        android:background="@color/chat_background"
         >
 <!--         android:layout_above="@+id/bottom_bar" -->
 
