--- a/android_search/res/layout/activity_main_twopane.xml
+++ b/android_search/res/layout/activity_main_twopane.xml
@@ -27,7 +27,7 @@ android:layout_height="match_parent">
     android:id="@+id/the_main_layout"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:background="@drawable/chat_background"
+    android:background="@color/chat_background"
     android:layout_height="fill_parent">
     
 <LinearLayout 
