--- a/android_search/res/layout/fragment_chat.xml
+++ b/android_search/res/layout/fragment_chat.xml
@@ -20,7 +20,7 @@
         android:drawSelectorOnTop="true"
         android:stackFromBottom="false"
         android:transcriptMode="alwaysScroll" 
-        android:background="@drawable/chat_background"
+        android:background="@color/chat_background"
         >
     </ListView>
 
