--- a/android_search/res/layout/fragment_hotel_list_portrait.xml
+++ b/android_search/res/layout/fragment_hotel_list_portrait.xml
@@ -1,20 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="0.2"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/hotelListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:drawSelectorOnTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:scrollbarStyle="outsideOverlay"
-        android:background="@drawable/chat_background"
-        android:choiceMode="singleChoice"
-        android:divider="@null"
+        android:scrollbars="vertical"
+        android:background="@color/chat_background"
+        android:paddingTop="2dp"
         android:cacheColorHint="#00000000" >
-    </ListView>
-</LinearLayout>
+    </android.support.v7.widget.RecyclerView>
+<!--         android:scrollbarStyle="outsideOverlay" -->
+    
+    <FrameLayout 
+        android:id="@+id/hotelListFooter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+  		android:layout_alignParentBottom="true"
+        android:paddingLeft="35dp"
+       	android:paddingRight="35dp"
+       	android:elevation="2dp"
+       	android:visibility="visible"
+       	android:gravity="center_horizontal"
+  		>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+        	android:layout_height="48dp"
+  			android:background="@drawable/search_background"
+	  		android:orientation="horizontal"
+	  		android:gravity="center_vertical|center_horizontal"
+  			>
+
+	        
+	        <TextView  
+	            android:text="Loading" 
+	            android:textSize="14sp" 
+	            android:layout_height="wrap_content" 
+	            android:textStyle="bold" 
+	            android:layout_width="wrap_content" android:freezesText="true"
+	            android:textColor="#ffeeeeee"
+	            android:layout_gravity="center_vertical|center_horizontal"></TextView>
+	        
+	        <ProgressBar
+	            android:indeterminateDrawable="@drawable/my_progress_indeterminate"
+	            android:layout_width="20dp"
+	            android:layout_height="20dp"
+	            android:layout_marginStart="5dp"
+	            />
+	        
+	    </LinearLayout>
+    </FrameLayout>
+</RelativeLayout>
