--- a/android_search/res/layout/hotel_map.xml
+++ b/android_search/res/layout/hotel_map.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
-    android:background="@drawable/chat_background"
+    android:background="@color/chat_background"
 	    android:id="@+id/map_container" 
     >
 </RelativeLayout>
