--- a/android_search/res/layout/row_vha_chat.xml
+++ b/android_search/res/layout/row_vha_chat.xml
@@ -9,7 +9,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:background="@drawable/bubble2_red"
+        android:background="@drawable/vha_chat_bubble"
         android:orientation="horizontal"    
         >
          <TextView
@@ -21,7 +21,7 @@
             
             android:layout_margin="2dip"
             android:textSize="16sp"
-            android:textColor="@android:color/primary_text_light" />
+            android:textColor="@color/vha_chat_text" />
          
          
 <!--     <FrameLayout -->
