initial facebook login

--- a/android_search/res/layout/row_vha_extra.xml
+++ b/android_search/res/layout/row_vha_extra.xml
@@ -5,6 +5,7 @@
      >
 
  <LinearLayout 
+     	android:id="@+id/chat_balloon"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
