--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<com.virtual_hotel_agent.search.util.ChatBalloon 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_marginLeft="2dip"
-    android:layout_marginTop="2dip"
+    card_view:cardBackgroundColor="#ee8888"
+	card_view:cardElevation="6dp"
      >
+<!--     android:layout_marginLeft="2dip" -->
+<!--     android:layout_marginTop="2dip" -->
 
-      <LinearLayout
+    
+      <RelativeLayout
+          android:id="@+id/chat_balloon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:background="@drawable/me_chat_bubble"
           android:animateLayoutChanges="true"
-          android:orientation="horizontal"
+          android:padding="6dp"
+          android:layout_margin="6dp"
            >
+           
+          
 
 	      <TextView
 	            android:id="@+id/label"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="center"
+	            android:layout_alignParentTop="true"
+	            android:layout_alignParentStart="true"
 	            android:visibility="gone"
 	            android:layout_margin="2dip"
 	            android:textSize="16sp"
@@ -31,7 +40,10 @@
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
 	          android:gravity="start"
-	          android:orientation="horizontal" >
+              android:layout_alignParentTop="true"
+              android:layout_alignParentStart="true"
+	          
+	           >
 
 <!-- 	              android:minHeight="56dp" -->
 
@@ -40,7 +52,7 @@
 	              android:layout_width="match_parent"
 	              android:layout_height="wrap_content"
 	              android:layout_alignParentTop="true"
-	              android:layout_alignParentLeft="true"
+	              android:layout_alignParentStart="true"
 	              android:inputType="text"
 	              android:layout_toLeftOf="@+id/buttonDelete"
 	              android:layout_marginLeft="-2dip"
@@ -74,5 +86,5 @@
 	      </RelativeLayout>
 
 	      
- 	</LinearLayout>
-</LinearLayout>
+ 	</RelativeLayout>
+</com.virtual_hotel_agent.search.util.ChatBalloon>
