--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -1,34 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.virtual_hotel_agent.search.util.ChatBalloon 
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    card_view:cardBackgroundColor="#ee8888"
-	card_view:cardElevation="6dp"
+    android:orientation="horizontal"
+    android:layout_marginLeft="2dip"
+    android:layout_marginTop="2dip"
      >
-<!--     android:layout_marginLeft="2dip" -->
-<!--     android:layout_marginTop="2dip" -->
 
-    
-      <RelativeLayout
-          android:id="@+id/chat_balloon"
+      <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
+          android:background="@drawable/me_chat_bubble"
           android:animateLayoutChanges="true"
-          android:padding="6dp"
-          android:layout_margin="6dp"
+          android:orientation="horizontal"
            >
-           
-          
 
 	      <TextView
 	            android:id="@+id/label"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
 	            android:layout_gravity="center"
-	            android:layout_alignParentTop="true"
-	            android:layout_alignParentStart="true"
 	            android:visibility="gone"
 	            android:layout_margin="2dip"
 	            android:textSize="16sp"
@@ -40,10 +31,7 @@
 	          android:layout_width="wrap_content"
 	          android:layout_height="wrap_content"
 	          android:gravity="start"
-              android:layout_alignParentTop="true"
-              android:layout_alignParentStart="true"
-	          
-	           >
+	          android:orientation="horizontal" >
 
 <!-- 	              android:minHeight="56dp" -->
 
@@ -52,7 +40,7 @@
 	              android:layout_width="match_parent"
 	              android:layout_height="wrap_content"
 	              android:layout_alignParentTop="true"
-	              android:layout_alignParentStart="true"
+	              android:layout_alignParentLeft="true"
 	              android:inputType="text"
 	              android:layout_toLeftOf="@+id/buttonDelete"
 	              android:layout_marginLeft="-2dip"
@@ -86,5 +74,5 @@
 	      </RelativeLayout>
 
 	      
- 	</RelativeLayout>
-</com.virtual_hotel_agent.search.util.ChatBalloon>
+ 	</LinearLayout>
+</LinearLayout>
