--- a/android_search/res/drawable/custom_button_disabled.xml
+++ b/android_search/res/drawable/custom_button_disabled.xml
@@ -1,29 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape>
-            <solid
-                android:color="#343434" />
-            <stroke
-                android:width="1dp"
-                android:color="#371717" />
-            <corners
-                android:radius="200dp" />
-            
-        </shape>
-    </item>
-    <item>
-        <shape>
-            <gradient
-                android:startColor="#443434"
-                android:endColor="#483838"
-                android:angle="270" />
-            <stroke
-                android:width="1dp"
-                android:color="#271717" />
-            <corners
-                android:radius="200dp" />
-           
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FF1744" />
+
+    <stroke
+        android:width="1dp"
+        android:color="#F50057" />
+
+    <corners android:radius="200dp" />
+</shape>
+
