--- a/android_search/res/layout/activity_main.xml
+++ b/android_search/res/layout/activity_main.xml
@@ -82,14 +82,7 @@ android:layout_height="match_parent">
             android:layout_height="wrap_content"
             android:text="@string/listening_"
             android:textColor="#dddddd" />
-
-        <ProgressBar
-            android:id="@+id/progressBar1"
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
-
+        
     </LinearLayout>
 
     
@@ -118,24 +111,35 @@ android:layout_height="match_parent">
         android:contentDescription="@string/microphone_button"
         android:onClick="myClickHandler"
         android:padding="12dp"
-        android:src="@drawable/avd"
+        android:src="@drawable/animated_microphone"
         android:text="@string/button"
         android:elevation="8dp"
+        android:hapticFeedbackEnabled="true"
         android:background="@drawable/transition_button_activate"
          />
-<!--         android:background="@drawable/transition_button_activate" -->
      
     <com.evaapis.android.SoundLevelView
         android:id="@+id/surfaceView_sound_wave"
-        android:layout_width="76dp"
-        android:layout_height="64dp"
+        android:layout_width="50dp"
+        android:layout_height="44dp"
     	android:layout_centerHorizontal="true"    
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="29.5dp"
         android:layout_alignParentBottom="true"
         android:visibility="gone"
         android:elevation="9dp"
          />
         
+    <ProgressBar
+            android:id="@+id/progressBar1"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+           	android:layout_centerHorizontal="true"    
+        	android:layout_marginBottom="19dp"
+        	android:layout_alignParentBottom="true"
+        	android:elevation="10dp"
+            android:visibility="gone" />
+<!--         	android:indeterminateDrawable="@drawable/progress_bar"     -->
+    
      
     
      </RelativeLayout>
