--- a/android_search/res/layout/row_mychat.xml
+++ b/android_search/res/layout/row_mychat.xml
@@ -9,7 +9,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:animateLayoutChanges="true"
-          android:background="#fff"
+          android:layout_gravity="left"
           android:elevation="6dp"
           android:layout_marginLeft="2dp"
           android:layout_marginBottom="8dp"
