--- a/android_search/res/layout/row_vha_chat.xml
+++ b/android_search/res/layout/row_vha_chat.xml
@@ -1,23 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="2dip"
+    android:orientation="horizontal"
+    android:gravity="right"
      >
 
-    <LinearLayout 
+    <com.virtual_hotel_agent.search.util.ChatBalloon 
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:animateLayoutChanges="true"
+          android:elevation="6dp"
+          android:layout_marginLeft="3dp"
+          android:layout_marginBottom="8dp"
+          android:layout_marginTop="2dp"
+          app:pointerSide="Right"
+          app:pointerColor="#03A9F4"
+           >
+    <LinearLayout
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:background="@drawable/vha_chat_bubble"
-        android:orientation="horizontal"    
+		android:layout_gravity="right"        
+        android:background="#03A9F4"
+        android:orientation="horizontal"
+        android:padding="10dp"    
         >
          <TextView
             android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Hello bubbles!"
+            android:text="Lorem ipsum bla bla asdfg dfswe"
             
             android:layout_margin="2dip"
             android:textSize="16sp"
@@ -56,7 +70,7 @@
 
 <!--     </FrameLayout> -->
     </LinearLayout>
-    
+    </com.virtual_hotel_agent.search.util.ChatBalloon>
      
      <!-- 
     <TextView
@@ -72,4 +86,4 @@
          -->
 
 
-</RelativeLayout>
+</LinearLayout>
