--- a/android_search/res/drawable/custom_button.xml
+++ b/android_search/res/drawable/custom_button.xml
@@ -1,58 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- <layer-list xmlns:android="http://schemas.android.com/apk/res/android"> -->
 
-<!--      Drop Shadow -->
-<!--      <item> -->
-<!--         <shape> -->
-<!--             <padding android:top="2dp" android:right="4dp" android:bottom="4dp" android:left="4dp" /> -->
-<!--             <corners android:radius="200dp" /> -->
-            
-<!-- 		    <gradient -->
-<!-- 		        android:centerColor="#ff515151" -->
-<!-- 		        android:endColor="#40000000" -->
-<!-- 		        android:gradientRadius="32" -->
-<!-- 		        android:startColor="#ff313131" -->
-<!-- 		        android:type="radial" > -->
-<!-- 		    </gradient> -->
-<!--         </shape> -->
-<!--     </item> -->
-     
-    <!-- Background -->
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
-        <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
-            <solid
-                android:color="#E53935" />
-            <stroke
-                android:width="1dp"
-                android:color="#E53935" />
-            <corners android:radius="200dp" />
-           
-        </shape>
-         <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
-            android:propertyName="translationZ"
-            android:valueTo="@dimen/touch_raise"
-            android:valueType="floatType" />
-    </item>
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        android:color="?android:colorControlHighlight">
     <item>
-        <shape>
+        <shape  android:shape="oval">
             <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
             <solid
                 android:color="#F44336" />
             <stroke
                 android:width="1dp"
                 android:color="#EF5350" />
-            <corners
-                android:radius="200dp" />
             
         </shape>
-         <objectAnimator
-            android:duration="@android:integer/config_shortAnimTime"
-            android:propertyName="translationZ"
-            android:valueTo="0dp"
-            android:valueType="floatType" />
     </item>
-    </selector>
-<!-- </layer-list> -->
+    </ripple>
