--- a/android_search/res/drawable/custom_button_disabled.xml
+++ b/android_search/res/drawable/custom_button_disabled.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        android:color="?android:colorControlHighlight">
+<item>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"  android:shape="oval">
     <solid android:color="#FF1744" />
 
     <stroke
         android:width="1dp"
         android:color="#F50057" />
-
-    <corners android:radius="200dp" />
 </shape>
-
+</item>
+</ripple>
